--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "sunrise"
 
 # Site Settings
-locale                   : "en"
-title                    : "Site Title"
+locale                   : "pt-BR"
+title                    : "Lugares Legais em São Paulo"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Marcos Abreu"
+description              : "Este site contém uma lista de lugares legais em São Paulo."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
