--- a/_config.yml
+++ b/_config.yml
@@ -150,6 +150,8 @@ keep_files:
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
+header:
+   image: /assets/images/opcao1.png
 
 # Conversion
 markdown: kramdown
