--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "pt-BR"
 title                    : "Lugares Legais em São Paulo"
 title_separator          : "-"
-name                     : "Marcos Abreu"
+name                     : "M. Abreu"
 description              : "Este site contém uma lista de lugares legais em São Paulo."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
