--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /year-archive/
   - title: "Contact"
     url: /contact/
-  - title: "Collections"
+  - title: "teste"
     url: /collection-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
